# claw-cog

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  coverage.xml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-checklist.yml  release.yml
claw_cog_plugin/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
claw_cog_plugin/src/: bridge.ts  index.ts
claw_cog_plugin/src/hooks/: PostToolUseHook.ts  SessionEndHook.ts  SessionStartHook.ts
claw_cog_plugin/test/: test_bridge.js
demos/: integration_demo.py
docs/: API.md  GIT_COMMIT_RULES.md  INDICATORS.md  JARVIS_REVIEW_ACTION.md  QUICK_START.md  README.md  VERSION_ROADMAP.md  architecture.md  project-positioning.md
docs/architecture/: DESIGN_PROPOSAL.md  V1_ARCHITECTURE.md
docs/architecture/papers/: READING_SUMMARY.md  README.md
docs/architecture/papers/notes/: 01-ai-awareness.md  02-exploring-consciousness-in-llms.md  03-insights-from-science-of-consciousness.md  04-modeling-layered-consciousness.md  05-itcma-internal-time-consciousness.md  06-cognipair-gnwt-digital-twins.md  07-muse-metacognition.md  08-measuring-metacognition.md  09-predictive-processing-robotics.md
docs/demos/: autonomous-consciousness-demo.html
docs/demos/project-neo-integration-demo/: index.html
docs/design/: 2026-05-15-p1-time-consciousness.md  v4.0.0-execution-verification-design.md  v4.0.0-governance-layer-design.md  v4.0.0-release-plan.md
docs/integration/: claw-cog-integration-analysis.md
docs/planning/: v1.0.0-alpha.3-plan.md
docs/reports/: 2026-05-13-integration-test.md
docs/research/: AI_CONSCIOUSNESS_PAPERS.md
docs/roadmaps/: 2026-05-14-review-claw-cog-existing-roadmap.md  2026-05-14-review-claw-cog-roadmap.md  claw-cog-v1-roadmap.md  claw-cog-v1-v2-roadmap.md  claw-cog-v2-roadmap.md  claw-cog-v3-roadmap.md  claw-cog-v4-roadmap.md  claw-cog-v4.0.0-iteration-plan.md  claw-cog-v4.x-advanced-plan.md  v1.0.0-rc-plan.md  v1.0.0b3-plan.md  v2.0.0-plan.md
examples/: basic_agent.py  custom_config.py
skill/: SKILL.md
specs/: v2.0.0-iteration.md
src/: index.ts  types.ts
src/assessment/: meta_d_prime.ts
src/claw_cog/: __init__.py  bridge.py  cli.py  confidence_exposure.py  engine.py  exceptions.py  predictive_processing.py  py.typed  self_awareness.py  time_consciousness.py  types.py
src/claw_cog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/claw_cog/assessment/: __init__.py  meta_d_prime.py
src/claw_cog/config/: defaults.py
src/claw_cog/consciousness/: __init__.py
src/claw_cog/consciousness/governance/: __init__.py  audit.py  boundary.py  permission.py  policy.py
src/claw_cog/consciousness/governance/guardrails/: __init__.py  behavior_constraint.py  input_filter.py  output_filter.py
src/claw_cog/consciousness/verification/: __init__.py  calibrator.py  consistency.py  orchestrator.py  quality.py  validator.py
src/claw_cog/consciousness/verification/metrics/: __init__.py  accuracy.py  calibration.py
src/claw_cog/core/: __init__.py  agent.py  layers.py  workspace.py
src/claw_cog/execution/: __init__.py  context.py  executor.py  result.py  rollback.py
src/claw_cog/execution/handlers/: __init__.py  base.py  external.py  learning.py  memory.py
src/claw_cog/integration/: __init__.py  claw_mem_bridge.py  claw_mem_bridge.py,cover
src/claw_cog/layers/: __init__.py  c0_unconscious.py  c1_conscious.py  c2_metacognitive.py
src/claw_cog/modules/: __init__.py  temporal_perception.py  temporal_prediction.py  temporal_understanding.py
src/claw_cog/modules/observation/: __init__.py  anomaly_detector.py  engine.py  self_monitor.py  types.py
src/claw_cog/modules/volition/: __init__.py  engine.py  goal_tracker.py  intention_buffer.py  types.py
src/claw_cog/utils/: __init__.py
src/claw_cog_legacy/: __init__.py  boundary.py  engine.py  goal_driven.py  reflective.py  self_awareness.py
src/core/: agent.ts
src/integration/: claw_mem_bridge.ts
src/layers/: c0.ts  c1.ts  c2.ts
tests/: core.test.ts  test_agent.py  test_agent_enhanced.py  test_boundary.py  test_bridge.py  test_bridge_enhanced.py  test_c0.py  test_c0_coverage.py  test_c1.py  test_c1_coverage.py  test_c2.py  test_c2_coverage.py  test_cli.py  test_confidence_exposure.py  test_config.py  test_engine.py  test_goal_driven.py  test_indicator_properties.py  test_meta_d.py  test_meta_d_prime_enhanced.py  test_observation.py  test_observation_coverage.py  test_reflective.py  test_self_awareness.py  test_temporal_integration.py  test_temporal_perception.py  test_temporal_prediction.py  test_temporal_understanding.py  test_v150_modules.py  test_vo_integration.py  test_volition.py  test_volition_coverage.py  test_workspace.py
tests/benchmarks/: test_performance.py
tests/integration/: test_etclovg_full_pipeline.py  test_execution_integration.py  test_governance_agent_integration.py  test_verification_agent_integration.py
tests/test_integration/: __init__.py  test_memory.py
tests/unit/consciousness/governance/: test_audit.py  test_boundary.py  test_guardrails.py  test_permission.py  test_policy.py
tests/unit/consciousness/verification/: test_calibrator.py  test_consistency.py  test_metrics_accuracy.py  test_metrics_calibration.py  test_orchestrator.py  test_quality.py  test_validator.py
tests/unit/execution/: test_context.py  test_executor.py  test_handlers.py  test_result.py
